--- a/imports.html
+++ b/imports.html
@@ -1,6 +1,7 @@
-<script src="/bower_components/threejs/build/three.js"></script>
-<script src="/bower_components/threejs/examples/js/loaders/ColladaLoader.js"></script>
+<script src="../eventemitter2/lib/eventemitter2.js"></script>
+<script src="../threejs/build/three.js"></script>
+<script src="../threejs/examples/js/loaders/ColladaLoader.js"></script>
 <script src="scripts/ColladaAnimationCompress/ColladaLoader2.js"></script>
-<script src="/bower_components/threejs/examples/js/loaders/STLLoader.js"></script>
-<script src="/bower_components/eventemitter2/lib/eventemitter2.js"></script>
-<script src="/bower_components/ros3djs/build/ros3d.js"></script>
+<script src="../threejs/examples/js/loaders/STLLoader.js"></script>
+<script src="../ros3djs/build/ros3d.js"></script>
+
